--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -113,31 +113,36 @@ pipeline {
     }
 
     //────────────────────────────────────────────────────────────────────────────
-    stage('Tag & Push Images (Store & Compare IDs)') {
+   
+    stage('Tag & Push Images (inside Minikube)') {
       steps {
         script {
-          // 1) Path to the JSON file where we store last‑pushed ImageIDs
+          // 1) Make sure Minikube docker-env is still active:
+          sh '''
+            PROFILE="${MINIKUBE_PROFILE}"
+
+            echo "▶ Ensuring we are in Minikube’s Docker context…"
+            eval $(minikube -p "${PROFILE}" docker-env)
+            echo "✔ Now ‘docker’ = Minikube’s daemon →"
+            docker info | grep "Server Version" -m1
+          '''
+
+          // 2) Path to JSON that persists last‐pushed IDs
           def idsFile = "${env.HOST_PERSISTENT_STORAGE}/image_ids.json"
-    
-          // 2) If the file does not exist or is empty, reinitialize it to a valid JSON object
           if (!fileExists(idsFile) || readFile(idsFile).trim() == '') {
-            echo "⚙️  Creating or re‑initializing ${idsFile} → {}"
             writeFile file: idsFile, text: '{}'
           }
-    
-          // 3) (Optional) Debug: show exactly what’s inside image_ids.json before parsing
           echo "🔍 [DEBUG] contents of ${idsFile}:"
-          sh "cat ${idsFile} || echo '<file-not-found or empty>'"
-    
-          // 4) Parse the JSON (now guaranteed to be at least “{}”)
+          sh "cat ${idsFile} || echo '<empty>'"
+
           def storedIds
           try {
             storedIds = readJSON file: idsFile
           } catch (Exception err) {
             error("❌ Could not parse ${idsFile} as JSON: ${err.getMessage()}")
           }
-    
-          // 5) List of all service tags
+
+          // 3) List of all service‐tags to check
           def services = [
             'tf-base',
             'frontend',
@@ -148,8 +153,8 @@ pipeline {
             'inference_service_model3',
             'inference_service_model4'
           ]
-    
-          // 6) Docker Hub credentials
+
+          // 4) Use DockerHub creds but run docker login *inside* Minikube’s Docker
           withCredentials([usernamePassword(
             credentialsId: "${DOCKER_CREDS}",
             usernameVariable: 'DOCKER_USER',
@@ -158,58 +163,71 @@ pipeline {
             services.each { svc ->
               def localTag  = "deepanshu0903/nst_app:${svc}"
               def remoteTag = "${env.DOCKER_USER}/nst_app:${svc}"
-    
-              echo ">>> Checking '${svc}'"
-    
-              // a) Does the local image exist?
+
+              echo ">>> Checking service '${svc}'…"
+
+              // a) Does the local image exist in Minikube’s Docker?
               def localExists = sh(
                 script: "docker image inspect ${localTag} >/dev/null 2>&1 && echo 'YES' || echo 'NO'",
                 returnStdout: true
               ).trim()
-    
+
               if (localExists != 'YES') {
-                echo "❌ Local image '${localTag}' not found; skipping."
+                echo "❌ Local image '${localTag}' not found in Minikube; skipping."
                 return
               }
-    
-              // b) Get the current local ID
+
+              // b) Grab the image ID from Minikube’s daemon
               def localId = sh(
                 script: "docker image inspect --format='{{.Id}}' ${localTag}",
                 returnStdout: true
               ).trim()
-    
-              // c) Look up the previously stored ID (or empty if missing)
+
+              // c) Compare to previously stored ID (in OUR host‐mounted JSON)
               def prevId = storedIds[svc] ?: ''
               echo "    Local ID: ${localId}"
-              echo "    Prev Stored ID: ${prevId ?: '<none>'}"
-    
+              echo "    Prev Stored ID: ${prevId ?: '<none>'}"
+
               if (prevId == localId) {
-                echo "➖ ${svc} unchanged (IDs match); skipping push"
+                echo "➖ ${svc} unchanged; skipping push."
               } else {
-                echo "🔖 ${svc} changed (or first‐time); pushing…"
-    
-                // d) Tag & push
+                echo "🔖 ${svc} changed (or first time) → pushing…"
+
+                // d) Perform docker login *inside Minikube* so that credentials go into Minikube’s config
                 sh """
                   echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
                   docker tag "${localTag}" "${remoteTag}"
                   docker push "${remoteTag}"
                 """.stripIndent()
-    
-                // e) After successful push, update storedIds[svc] = localId
+
+                // e) Update our JSON on the host‐mounted path
                 storedIds[svc] = localId
-    
-                // f) Write the updated map back to the JSON file
                 writeJSON file: idsFile, json: storedIds, pretty: true
                 echo "    ✏️ Updated stored ID for '${svc}' → ${localId}"
               }
             } // end services.each
-    
-            echo "✅ All 'store & compare IDs' tasks finished"
+
+            echo "✅ Finished Tag & Push (all images are up‐to‐date on DockerHub)."
           } // end withCredentials
         } // end script
       } // end steps
     } // end stage
 
+
+
+      //────────────────────────────────────────────────────────────────────────────
+
+
+      stage('Deploy to K8s & ELK (Ansible)') {
+        steps {
+          unstash 'kubecfg'
+          sh '''
+            export KUBECONFIG="$WORKSPACE/minikube-kubeconfig.yaml"
+            cd ansible/playbooks
+            ansible-playbook -i ../inventory.ini umbrella-playbook.yml
+          '''
+        }
+      }
 
     //────────────────────────────────────────────────────────────────────────────
     stage('Check Feedback & Trigger Fine-Tuning') {
